alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@
 }
 
 .endscreen-container{
-  width: 400px;
+  width: 100%;
 }
 
 .questions-section{
@@ -70,16 +70,21 @@
   background-color: black !important;
 }
 
-@media screen and (min-width:330px) and (max-width:600px) {
+@media screen and (min-width:200px) and (max-width:600px) {
   .result-detailsbox-width{
       width: 200px;
   }
   .endscreen-container{
-      width: 250px !important;
+      width: auto !important;
   }
   .padding{
     padding-top: 0px !important;
   }
+
+  .questions-section{
+    width: 250px;
+    margin-left: 0px !important;
+}
 
   .toast-message{
     width: auto;
@@ -92,7 +97,7 @@
 
   @media screen and (max-width:600px) {
     .box-width{
-        width: 350px;
+        width: 200px;
       }
       .questions-section{
         width: 250px;
